src/y.output
Terminals unused in grammar

   CONSTANT
   LEFT_OP
   RIGHT_OP
   TYPE_NAME
   STRUCT
   UNION
   ENUM


Grammar

    0 $accept: program_start $end

    1 program_start: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: declaration_specifiers declarator compound_statement

    7 declaration: declaration_specifiers ';'
    8            | declaration_specifiers init_declarator_list ';'

    9 declaration_list: declaration
   10                 | declaration_list declaration

   11 declaration_specifiers: storage_class_specifier
   12                       | storage_class_specifier declaration_specifiers
   13                       | type_specifier
   14                       | type_specifier declaration_specifiers
   15                       | type_qualifier
   16                       | type_qualifier declaration_specifiers

   17 storage_class_specifier: TYPEDEF
   18                        | EXTERN
   19                        | STATIC
   20                        | AUTO
   21                        | REGISTER

   22 type_specifier: VOID
   23               | CHAR
   24               | SHORT
   25               | INT
   26               | LONG
   27               | FLOAT
   28               | DOUBLE
   29               | SIGNED
   30               | UNSIGNED
   31               | class_specifier

   32 type_qualifier: CONST
   33               | VOLATILE
   34               | VIRTUAL

   35 init_declarator_list: init_declarator
   36                     | init_declarator_list ',' init_declarator

   37 init_declarator: declarator
   38                | declarator '=' initializer

   39 specifier_qualifier_list: type_specifier specifier_qualifier_list
   40                         | type_specifier
   41                         | type_qualifier specifier_qualifier_list
   42                         | type_qualifier

   43 class_specifier: CLASS IDENTIFIER '{' class_declaration_list '}'
   44                | CLASS IDENTIFIER ':' identifier_list '{' class_declaration_list '}'
   45                | CLASS IDENTIFIER

   46 class_declaration_list: class_declaration
   47                       | class_declaration_list class_declaration

   48 class_declaration: specifier_qualifier_list class_declarator_list ';'
   49                  | specifier_qualifier_list class_declarator compound_statement
   50                  | class_declarator compound_statement

   51 class_declarator_list: class_declarator
   52                      | class_declarator_list ',' class_declarator

   53 class_declarator: declarator

   54 declarator: pointer direct_declarator
   55           | direct_declarator

   56 direct_declarator: IDENTIFIER
   57                  | '(' declarator ')'
   58                  | direct_declarator '[' constant_expression ']'
   59                  | direct_declarator '[' ']'
   60                  | direct_declarator '(' parameter_type_list ')'
   61                  | direct_declarator '(' expression ')'
   62                  | direct_declarator '(' ')'

   63 pointer: '*'
   64        | '*' type_qualifier_list
   65        | '*' pointer
   66        | '*' type_qualifier_list pointer

   67 type_qualifier_list: type_qualifier
   68                    | type_qualifier_list type_qualifier

   69 parameter_type_list: parameter_list
   70                    | parameter_list ',' ELLIPSIS

   71 parameter_list: parameter_declaration
   72               | parameter_list ',' parameter_declaration

   73 parameter_declaration: declaration_specifiers declarator
   74                      | declaration_specifiers abstract_declarator
   75                      | declaration_specifiers

   76 identifier_list: IDENTIFIER
   77                | identifier_list ',' IDENTIFIER

   78 initializer: assignment_expression
   79            | '{' initializer_list '}'

   80 initializer_list: initializer
   81                 | initializer_list ',' initializer

   82 type_name: specifier_qualifier_list
   83          | specifier_qualifier_list abstract_declarator

   84 abstract_declarator: pointer
   85                    | direct_abstract_declarator
   86                    | pointer direct_abstract_declarator

   87 direct_abstract_declarator: '(' abstract_declarator ')'
   88                           | '[' ']'
   89                           | '[' constant_expression ']'
   90                           | direct_abstract_declarator '[' ']'
   91                           | direct_abstract_declarator '[' constant_expression ']'
   92                           | '(' ')'
   93                           | '(' parameter_type_list ')'
   94                           | direct_abstract_declarator '(' ')'
   95                           | direct_abstract_declarator '(' parameter_type_list ')'

   96 statement: labeled_statement
   97          | compound_statement
   98          | expression_statement
   99          | selection_statement
  100          | iteration_statement
  101          | jump_statement

  102 labeled_statement: IDENTIFIER ':' statement
  103                  | CASE constant_expression ':' statement
  104                  | DEFAULT ':' statement

  105 expression_statement: ';'
  106                     | expression ';'

  107 compound_statement: '{' '}'
  108                   | '{' statement_list '}'
  109                   | '{' declaration_list '}'
  110                   | '{' declaration_list statement_list '}'

  111 statement_list: statement
  112               | statement_list statement

  113 selection_statement: IF '(' expression ')' statement
  114                    | IF '(' expression ')' statement ELSE statement
  115                    | SWITCH '(' expression ')' statement

  116 iteration_statement: WHILE '(' expression ')' statement
  117                    | DO statement WHILE '(' expression ')' ';'
  118                    | FOR '(' expression_statement expression_statement expression ')' statement

  119 jump_statement: GOTO IDENTIFIER ';'
  120               | CONTINUE ';'
  121               | BREAK ';'
  122               | RETURN ';'
  123               | RETURN expression ';'

  124 expression: assignment_expression
  125           | expression ',' assignment_expression

  126 assignment_expression: conditional_expression
  127                      | unary_expression assignment_operator assignment_expression
  128                      | NEW_OP IDENTIFIER '(' ')'
  129                      | DELETE_OP IDENTIFIER

  130 assignment_operator: '='
  131                    | MUL_ASSIGN
  132                    | DIV_ASSIGN
  133                    | MOD_ASSIGN
  134                    | ADD_ASSIGN
  135                    | SUB_ASSIGN
  136                    | LEFT_ASSIGN
  137                    | RIGHT_ASSIGN
  138                    | AND_ASSIGN
  139                    | XOR_ASSIGN
  140                    | OR_ASSIGN

  141 conditional_expression: logical_or_expression

  142 constant_expression: conditional_expression

  143 logical_or_expression: logical_and_expression
  144                      | logical_or_expression OR_OP logical_and_expression

  145 logical_and_expression: equality_expression
  146                       | logical_and_expression AND_OP equality_expression

  147 equality_expression: relational_expression
  148                    | equality_expression EQ_OP relational_expression
  149                    | equality_expression NE_OP relational_expression

  150 relational_expression: additive_expression
  151                      | relational_expression '<' additive_expression
  152                      | relational_expression '>' additive_expression
  153                      | relational_expression LE_OP additive_expression
  154                      | relational_expression GE_OP additive_expression

  155 additive_expression: multiplicative_expression
  156                    | additive_expression '+' multiplicative_expression
  157                    | additive_expression '-' multiplicative_expression

  158 multiplicative_expression: cast_expression
  159                          | multiplicative_expression '*' cast_expression
  160                          | multiplicative_expression '/' cast_expression
  161                          | multiplicative_expression '%' cast_expression

  162 cast_expression: unary_expression
  163                | '(' type_name ')' cast_expression

  164 unary_expression: postfix_expression
  165                 | INC_OP unary_expression
  166                 | DEC_OP unary_expression
  167                 | unary_operator cast_expression
  168                 | SIZEOF unary_expression

  169 unary_operator: '&'
  170               | '*'
  171               | '+'
  172               | '-'
  173               | '~'
  174               | '!'

  175 postfix_expression: primary_expression
  176                   | postfix_expression '[' expression ']'
  177                   | postfix_expression '(' ')'
  178                   | postfix_expression '(' argument_expression_list ')'
  179                   | postfix_expression '.' IDENTIFIER
  180                   | postfix_expression PTR_OP IDENTIFIER
  181                   | postfix_expression INC_OP
  182                   | postfix_expression DEC_OP

  183 primary_expression: IDENTIFIER
  184                   | constant_value
  185                   | STRING_LITERAL
  186                   | '(' expression ')'

  187 argument_expression_list: assignment_expression
  188                         | argument_expression_list ',' assignment_expression

  189 constant_value: INTEGER_CONSTANT
  190               | CHARACTER_CONSTANT
  191               | FLOATING_CONSTANT


Terminals, with rules where they appear

$end (0) 0
'!' (33) 174
'%' (37) 161
'&' (38) 169
'(' (40) 57 60 61 62 87 92 93 94 95 113 114 115 116 117 118 128 163
    177 178 186
')' (41) 57 60 61 62 87 92 93 94 95 113 114 115 116 117 118 128 163
    177 178 186
'*' (42) 63 64 65 66 159 170
'+' (43) 156 171
',' (44) 36 52 70 72 77 81 125 188
'-' (45) 157 172
'.' (46) 179
'/' (47) 160
':' (58) 44 102 103 104
';' (59) 7 8 48 105 106 117 119 120 121 122 123
'<' (60) 151
'=' (61) 38 130
'>' (62) 152
'[' (91) 58 59 88 89 90 91 176
']' (93) 58 59 88 89 90 91 176
'{' (123) 43 44 79 107 108 109 110
'}' (125) 43 44 79 107 108 109 110
'~' (126) 173
error (256)
IDENTIFIER (258) 43 44 45 56 76 77 102 119 128 129 179 180 183
CONSTANT (259)
INTEGER_CONSTANT (260) 189
CHARACTER_CONSTANT (261) 190
FLOATING_CONSTANT (262) 191
STRING_LITERAL (263) 185
SIZEOF (264) 168
PTR_OP (265) 180
INC_OP (266) 165 181
DEC_OP (267) 166 182
LEFT_OP (268)
RIGHT_OP (269)
LE_OP (270) 153
GE_OP (271) 154
EQ_OP (272) 148
NE_OP (273) 149
NEW_OP (274) 128
DELETE_OP (275) 129
AND_OP (276) 146
OR_OP (277) 144
MUL_ASSIGN (278) 131
DIV_ASSIGN (279) 132
MOD_ASSIGN (280) 133
ADD_ASSIGN (281) 134
SUB_ASSIGN (282) 135
LEFT_ASSIGN (283) 136
RIGHT_ASSIGN (284) 137
AND_ASSIGN (285) 138
XOR_ASSIGN (286) 139
OR_ASSIGN (287) 140
TYPE_NAME (288)
TYPEDEF (289) 17
EXTERN (290) 18
STATIC (291) 19
AUTO (292) 20
REGISTER (293) 21
CHAR (294) 23
SHORT (295) 24
INT (296) 25
LONG (297) 26
SIGNED (298) 29
UNSIGNED (299) 30
FLOAT (300) 27
DOUBLE (301) 28
CONST (302) 32
VOLATILE (303) 33
VOID (304) 22
VIRTUAL (305) 34
STRUCT (306)
UNION (307)
CLASS (308) 43 44 45
ENUM (309)
ELLIPSIS (310) 70
CASE (311) 103
DEFAULT (312) 104
IF (313) 113 114
ELSE (314) 114
SWITCH (315) 115
WHILE (316) 116 117
DO (317) 117
FOR (318) 118
GOTO (319) 119
CONTINUE (320) 120
BREAK (321) 121
RETURN (322) 122 123
LOWER_THAN_ELSE (323)


Nonterminals, with rules where they appear

$accept (90)
    on left: 0
program_start (91)
    on left: 1, on right: 0
translation_unit (92)
    on left: 2 3, on right: 1 3
external_declaration (93)
    on left: 4 5, on right: 2 3
function_definition (94)
    on left: 6, on right: 4
declaration (95)
    on left: 7 8, on right: 5 9 10
declaration_list (96)
    on left: 9 10, on right: 10 109 110
declaration_specifiers (97)
    on left: 11 12 13 14 15 16, on right: 6 7 8 12 14 16 73 74 75
storage_class_specifier (98)
    on left: 17 18 19 20 21, on right: 11 12
type_specifier (99)
    on left: 22 23 24 25 26 27 28 29 30 31, on right: 13 14 39 40
type_qualifier (100)
    on left: 32 33 34, on right: 15 16 41 42 67 68
init_declarator_list (101)
    on left: 35 36, on right: 8 36
init_declarator (102)
    on left: 37 38, on right: 35 36
specifier_qualifier_list (103)
    on left: 39 40 41 42, on right: 39 41 48 49 82 83
class_specifier (104)
    on left: 43 44 45, on right: 31
class_declaration_list (105)
    on left: 46 47, on right: 43 44 47
class_declaration (106)
    on left: 48 49 50, on right: 46 47
class_declarator_list (107)
    on left: 51 52, on right: 48 52
class_declarator (108)
    on left: 53, on right: 49 50 51 52
declarator (109)
    on left: 54 55, on right: 6 37 38 53 57 73
direct_declarator (110)
    on left: 56 57 58 59 60 61 62, on right: 54 55 58 59 60 61 62
pointer (111)
    on left: 63 64 65 66, on right: 54 65 66 84 86
type_qualifier_list (112)
    on left: 67 68, on right: 64 66 68
parameter_type_list (113)
    on left: 69 70, on right: 60 93 95
parameter_list (114)
    on left: 71 72, on right: 69 70 72
parameter_declaration (115)
    on left: 73 74 75, on right: 71 72
identifier_list (116)
    on left: 76 77, on right: 44 77
initializer (117)
    on left: 78 79, on right: 38 80 81
initializer_list (118)
    on left: 80 81, on right: 79 81
type_name (119)
    on left: 82 83, on right: 163
abstract_declarator (120)
    on left: 84 85 86, on right: 74 83 87
direct_abstract_declarator (121)
    on left: 87 88 89 90 91 92 93 94 95, on right: 85 86 90 91 94 95
statement (122)
    on left: 96 97 98 99 100 101, on right: 102 103 104 111 112 113
    114 115 116 117 118
labeled_statement (123)
    on left: 102 103 104, on right: 96
expression_statement (124)
    on left: 105 106, on right: 98 118
compound_statement (125)
    on left: 107 108 109 110, on right: 6 49 50 97
statement_list (126)
    on left: 111 112, on right: 108 110 112
selection_statement (127)
    on left: 113 114 115, on right: 99
iteration_statement (128)
    on left: 116 117 118, on right: 100
jump_statement (129)
    on left: 119 120 121 122 123, on right: 101
expression (130)
    on left: 124 125, on right: 61 106 113 114 115 116 117 118 123
    125 176 186
assignment_expression (131)
    on left: 126 127 128 129, on right: 78 124 125 127 187 188
assignment_operator (132)
    on left: 130 131 132 133 134 135 136 137 138 139 140, on right:
    127
conditional_expression (133)
    on left: 141, on right: 126 142
constant_expression (134)
    on left: 142, on right: 58 89 91 103
logical_or_expression (135)
    on left: 143 144, on right: 141 144
logical_and_expression (136)
    on left: 145 146, on right: 143 144 146
equality_expression (137)
    on left: 147 148 149, on right: 145 146 148 149
relational_expression (138)
    on left: 150 151 152 153 154, on right: 147 148 149 151 152 153
    154
additive_expression (139)
    on left: 155 156 157, on right: 150 151 152 153 154 156 157
multiplicative_expression (140)
    on left: 158 159 160 161, on right: 155 156 157 159 160 161
cast_expression (141)
    on left: 162 163, on right: 158 159 160 161 163 167
unary_expression (142)
    on left: 164 165 166 167 168, on right: 127 162 165 166 168
unary_operator (143)
    on left: 169 170 171 172 173 174, on right: 167
postfix_expression (144)
    on left: 175 176 177 178 179 180 181 182, on right: 164 176 177
    178 179 180 181 182
primary_expression (145)
    on left: 183 184 185 186, on right: 175
argument_expression_list (146)
    on left: 187 188, on right: 178 188
constant_value (147)
    on left: 189 190 191, on right: 184


State 0

    0 $accept: . program_start $end

    TYPEDEF   shift, and go to state 1
    EXTERN    shift, and go to state 2
    STATIC    shift, and go to state 3
    AUTO      shift, and go to state 4
    REGISTER  shift, and go to state 5
    CHAR      shift, and go to state 6
    SHORT     shift, and go to state 7
    INT       shift, and go to state 8
    LONG      shift, and go to state 9
    SIGNED    shift, and go to state 10
    UNSIGNED  shift, and go to state 11
    FLOAT     shift, and go to state 12
    DOUBLE    shift, and go to state 13
    CONST     shift, and go to state 14
    VOLATILE  shift, and go to state 15
    VOID      shift, and go to state 16
    VIRTUAL   shift, and go to state 17
    CLASS     shift, and go to state 18

    program_start            go to state 19
    translation_unit         go to state 20
    external_declaration     go to state 21
    function_definition      go to state 22
    declaration              go to state 23
    declaration_specifiers   go to state 24
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    type_qualifier           go to state 27
    class_specifier          go to state 28


State 1

   17 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 17 (storage_class_specifier)


State 2

   18 storage_class_specifier: EXTERN .

    $default  reduce using rule 18 (storage_class_specifier)


State 3

   19 storage_class_specifier: STATIC .

    $default  reduce using rule 19 (storage_class_specifier)


State 4

   20 storage_class_specifier: AUTO .

    $default  reduce using rule 20 (storage_class_specifier)


State 5

   21 storage_class_specifier: REGISTER .

    $default  reduce using rule 21 (storage_class_specifier)


State 6

   23 type_specifier: CHAR .

    $default  reduce using rule 23 (type_specifier)


State 7

   24 type_specifier: SHORT .

    $default  reduce using rule 24 (type_specifier)


State 8

   25 type_specifier: INT .

    $default  reduce using rule 25 (type_specifier)


State 9

   26 type_specifier: LONG .

    $default  reduce using rule 26 (type_specifier)


State 10

   29 type_specifier: SIGNED .

    $default  reduce using rule 29 (type_specifier)


State 11

   30 type_specifier: UNSIGNED .

    $default  reduce using rule 30 (type_specifier)


State 12

   27 type_specifier: FLOAT .

    $default  reduce using rule 27 (type_specifier)


State 13

   28 type_specifier: DOUBLE .

    $default  reduce using rule 28 (type_specifier)


State 14

   32 type_qualifier: CONST .

    $default  reduce using rule 32 (type_qualifier)


State 15

   33 type_qualifier: VOLATILE .

    $default  reduce using rule 33 (type_qualifier)


State 16

   22 type_specifier: VOID .

    $default  reduce using rule 22 (type_specifier)


State 17

   34 type_qualifier: VIRTUAL .

    $default  reduce using rule 34 (type_qualifier)


State 18

   43 class_specifier: CLASS . IDENTIFIER '{' class_declaration_list '}'
   44                | CLASS . IDENTIFIER ':' identifier_list '{' class_declaration_list '}'
   45                | CLASS . IDENTIFIER

    IDENTIFIER  shift, and go to state 29


State 19

    0 $accept: program_start . $end

    $end  shift, and go to state 30


State 20

    1 program_start: translation_unit .
    3 translation_unit: translation_unit . external_declaration

    TYPEDEF   shift, and go to state 1
    EXTERN    shift, and go to state 2
    STATIC    shift, and go to state 3
    AUTO      shift, and go to state 4
    REGISTER  shift, and go to state 5
    CHAR      shift, and go to state 6
    SHORT     shift, and go to state 7
    INT       shift, and go to state 8
    LONG      shift, and go to state 9
    SIGNED    shift, and go to state 10
    UNSIGNED  shift, and go to state 11
    FLOAT     shift, and go to state 12
    DOUBLE    shift, and go to state 13
    CONST     shift, and go to state 14
    VOLATILE  shift, and go to state 15
    VOID      shift, and go to state 16
    VIRTUAL   shift, and go to state 17
    CLASS     shift, and go to state 18

    $default  reduce using rule 1 (program_start)

    external_declaration     go to state 31
    function_definition      go to state 22
    declaration              go to state 23
    declaration_specifiers   go to state 24
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    type_qualifier           go to state 27
    class_specifier          go to state 28


State 21

    2 translation_unit: external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 22

    4 external_declaration: function_definition .

    $default  reduce using rule 4 (external_declaration)


State 23

    5 external_declaration: declaration .

    $default  reduce using rule 5 (external_declaration)


State 24

    6 function_definition: declaration_specifiers . declarator compound_statement
    7 declaration: declaration_specifiers . ';'
    8            | declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 32
    ';'         shift, and go to state 33
    '('         shift, and go to state 34
    '*'         shift, and go to state 35

    init_declarator_list  go to state 36
    init_declarator       go to state 37
    declarator            go to state 38
    direct_declarator     go to state 39
    pointer               go to state 40


State 25

   11 declaration_specifiers: storage_class_specifier .
   12                       | storage_class_specifier . declaration_specifiers

    TYPEDEF   shift, and go to state 1
    EXTERN    shift, and go to state 2
    STATIC    shift, and go to state 3
    AUTO      shift, and go to state 4
    REGISTER  shift, and go to state 5
    CHAR      shift, and go to state 6
    SHORT     shift, and go to state 7
    INT       shift, and go to state 8
    LONG      shift, and go to state 9
    SIGNED    shift, and go to state 10
    UNSIGNED  shift, and go to state 11
    FLOAT     shift, and go to state 12
    DOUBLE    shift, and go to state 13
    CONST     shift, and go to state 14
    VOLATILE  shift, and go to state 15
    VOID      shift, and go to state 16
    VIRTUAL   shift, and go to state 17
    CLASS     shift, and go to state 18

    $default  reduce using rule 11 (declaration_specifiers)

    declaration_specifiers   go to state 41
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    type_qualifier           go to state 27
    class_specifier          go to state 28


State 26

   13 declaration_specifiers: type_specifier .
   14                       | type_specifier . declaration_specifiers

    TYPEDEF   shift, and go to state 1
    EXTERN    shift, and go to state 2
    STATIC    shift, and go to state 3
    AUTO      shift, and go to state 4
    REGISTER  shift, and go to state 5
    CHAR      shift, and go to state 6
    SHORT     shift, and go to state 7
    INT       shift, and go to state 8
    LONG      shift, and go to state 9
    SIGNED    shift, and go to state 10
    UNSIGNED  shift, and go to state 11
    FLOAT     shift, and go to state 12
    DOUBLE    shift, and go to state 13
    CONST     shift, and go to state 14
    VOLATILE  shift, and go to state 15
    VOID      shift, and go to state 16
    VIRTUAL   shift, and go to state 17
    CLASS     shift, and go to state 18

    $default  reduce using rule 13 (declaration_specifiers)

    declaration_specifiers   go to state 42
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    type_qualifier           go to state 27
    class_specifier          go to state 28


State 27

   15 declaration_specifiers: type_qualifier .
   16                       | type_qualifier . declaration_specifiers

    TYPEDEF   shift, and go to state 1
    EXTERN    shift, and go to state 2
    STATIC    shift, and go to state 3
    AUTO      shift, and go to state 4
    REGISTER  shift, and go to state 5
    CHAR      shift, and go to state 6
    SHORT     shift, and go to state 7
    INT       shift, and go to state 8
    LONG      shift, and go to state 9
    SIGNED    shift, and go to state 10
    UNSIGNED  shift, and go to state 11
    FLOAT     shift, and go to state 12
    DOUBLE    shift, and go to state 13
    CONST     shift, and go to state 14
    VOLATILE  shift, and go to state 15
    VOID      shift, and go to state 16
    VIRTUAL   shift, and go to state 17
    CLASS     shift, and go to state 18

    $default  reduce using rule 15 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    type_qualifier           go to state 27
    class_specifier          go to state 28


State 28

   31 type_specifier: class_specifier .

    $default  reduce using rule 31 (type_specifier)


State 29

   43 class_specifier: CLASS IDENTIFIER . '{' class_declaration_list '}'
   44                | CLASS IDENTIFIER . ':' identifier_list '{' class_declaration_list '}'
   45                | CLASS IDENTIFIER .

    '{'  shift, and go to state 44
    ':'  shift, and go to state 45

    $default  reduce using rule 45 (class_specifier)


State 30

    0 $accept: program_start $end .

    $default  accept


State 31

    3 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 3 (translation_unit)


State 32

   56 direct_declarator: IDENTIFIER .

    $default  reduce using rule 56 (direct_declarator)


State 33

    7 declaration: declaration_specifiers ';' .

    $default  reduce using rule 7 (declaration)


State 34

   57 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 32
    '('         shift, and go to state 34
    '*'         shift, and go to state 35

    declarator         go to state 46
    direct_declarator  go to state 39
    pointer            go to state 40


State 35

   63 pointer: '*' .
   64        | '*' . type_qualifier_list
   65        | '*' . pointer
   66        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 14
    VOLATILE  shift, and go to state 15
    VIRTUAL   shift, and go to state 17
    '*'       shift, and go to state 35

    $default  reduce using rule 63 (pointer)

    type_qualifier       go to state 47
    pointer              go to state 48
    type_qualifier_list  go to state 49


State 36

    8 declaration: declaration_specifiers init_declarator_list . ';'
   36 init_declarator_list: init_declarator_list . ',' init_declarator

    ';'  shift, and go to state 50
    ','  shift, and go to state 51


State 37

   35 init_declarator_list: init_declarator .

    $default  reduce using rule 35 (init_declarator_list)


State 38

    6 function_definition: declaration_specifiers declarator . compound_statement
   37 init_declarator: declarator .
   38                | declarator . '=' initializer

    '='  shift, and go to state 52
    '{'  shift, and go to state 53

    $default  reduce using rule 37 (init_declarator)

    compound_statement  go to state 54


State 39

   55 declarator: direct_declarator .
   58 direct_declarator: direct_declarator . '[' constant_expression ']'
   59                  | direct_declarator . '[' ']'
   60                  | direct_declarator . '(' parameter_type_list ')'
   61                  | direct_declarator . '(' expression ')'
   62                  | direct_declarator . '(' ')'

    '('  shift, and go to state 55
    '['  shift, and go to state 56

    $default  reduce using rule 55 (declarator)


State 40

   54 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 32
    '('         shift, and go to state 34

    direct_declarator  go to state 57


State 41

   12 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 12 (declaration_specifiers)


State 42

   14 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 14 (declaration_specifiers)


State 43

   16 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 16 (declaration_specifiers)


State 44

   43 class_specifier: CLASS IDENTIFIER '{' . class_declaration_list '}'

    IDENTIFIER  shift, and go to state 32
    CHAR        shift, and go to state 6
    SHORT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9
    SIGNED      shift, and go to state 10
    UNSIGNED    shift, and go to state 11
    FLOAT       shift, and go to state 12
    DOUBLE      shift, and go to state 13
    CONST       shift, and go to state 14
    VOLATILE    shift, and go to state 15
    VOID        shift, and go to state 16
    VIRTUAL     shift, and go to state 17
    CLASS       shift, and go to state 18
    '('         shift, and go to state 34
    '*'         shift, and go to state 35

    type_specifier            go to state 58
    type_qualifier            go to state 59
    specifier_qualifier_list  go to state 60
    class_specifier           go to state 28
    class_declaration_list    go to state 61
    class_declaration         go to state 62
    class_declarator          go to state 63
    declarator                go to state 64
    direct_declarator         go to state 39
    pointer                   go to state 40


State 45

   44 class_specifier: CLASS IDENTIFIER ':' . identifier_list '{' class_declaration_list '}'

    IDENTIFIER  shift, and go to state 65

    identifier_list  go to state 66


State 46

   57 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 67


State 47

   67 type_qualifier_list: type_qualifier .

    $default  reduce using rule 67 (type_qualifier_list)


State 48

   65 pointer: '*' pointer .

    $default  reduce using rule 65 (pointer)


State 49

   64 pointer: '*' type_qualifier_list .
   66        | '*' type_qualifier_list . pointer
   68 type_qualifier_list: type_qualifier_list . type_qualifier

    CONST     shift, and go to state 14
    VOLATILE  shift, and go to state 15
    VIRTUAL   shift, and go to state 17
    '*'       shift, and go to state 35

    $default  reduce using rule 64 (pointer)

    type_qualifier  go to state 68
    pointer         go to state 69


State 50

    8 declaration: declaration_specifiers init_declarator_list ';' .

    $default  reduce using rule 8 (declaration)


State 51

   36 init_declarator_list: init_declarator_list ',' . init_declarator

    IDENTIFIER  shift, and go to state 32
    '('         shift, and go to state 34
    '*'         shift, and go to state 35

    init_declarator    go to state 70
    declarator         go to state 71
    direct_declarator  go to state 39
    pointer            go to state 40


State 52

   38 init_declarator: declarator '=' . initializer

    IDENTIFIER          shift, and go to state 72
    INTEGER_CONSTANT    shift, and go to state 73
    CHARACTER_CONSTANT  shift, and go to state 74
    FLOATING_CONSTANT   shift, and go to state 75
    STRING_LITERAL      shift, and go to state 76
    SIZEOF              shift, and go to state 77
    INC_OP              shift, and go to state 78
    DEC_OP              shift, and go to state 79
    NEW_OP              shift, and go to state 80
    DELETE_OP           shift, and go to state 81
    '{'                 shift, and go to state 82
    '('                 shift, and go to state 83
    '*'                 shift, and go to state 84
    '+'                 shift, and go to state 85
    '-'                 shift, and go to state 86
    '&'                 shift, and go to state 87
    '~'                 shift, and go to state 88
    '!'                 shift, and go to state 89

    initializer                go to state 90
    assignment_expression      go to state 91
    conditional_expression     go to state 92
    logical_or_expression      go to state 93
    logical_and_expression     go to state 94
    equality_expression        go to state 95
    relational_expression      go to state 96
    additive_expression        go to state 97
    multiplicative_expression  go to state 98
    cast_expression            go to state 99
    unary_expression           go to state 100
    unary_operator             go to state 101
    postfix_expression         go to state 102
    primary_expression         go to state 103
    constant_value             go to state 104


State 53

  107 compound_statement: '{' . '}'
  108                   | '{' . statement_list '}'
  109                   | '{' . declaration_list '}'
  110                   | '{' . declaration_list statement_list '}'

    IDENTIFIER          shift, and go to state 105
    INTEGER_CONSTANT    shift, and go to state 73
    CHARACTER_CONSTANT  shift, and go to state 74
    FLOATING_CONSTANT   shift, and go to state 75
    STRING_LITERAL      shift, and go to state 76
    SIZEOF              shift, and go to state 77
    INC_OP              shift, and go to state 78
    DEC_OP              shift, and go to state 79
    NEW_OP              shift, and go to state 80
    DELETE_OP           shift, and go to state 81
    TYPEDEF             shift, and go to state 1
    EXTERN              shift, and go to state 2
    STATIC              shift, and go to state 3
    AUTO                shift, and go to state 4
    REGISTER            shift, and go to state 5
    CHAR                shift, and go to state 6
    SHORT               shift, and go to state 7
    INT                 shift, and go to state 8
    LONG                shift, and go to state 9
    SIGNED              shift, and go to state 10
    UNSIGNED            shift, and go to state 11
    FLOAT               shift, and go to state 12
    DOUBLE              shift, and go to state 13
    CONST               shift, and go to state 14
    VOLATILE            shift, and go to state 15
    VOID                shift, and go to state 16
    VIRTUAL             shift, and go to state 17
    CLASS               shift, and go to state 18
    CASE                shift, and go to state 106
    DEFAULT             shift, and go to state 107
    IF                  shift, and go to state 108
    SWITCH              shift, and go to state 109
    WHILE               shift, and go to state 110
    DO                  shift, and go to state 111
    FOR                 shift, and go to state 112
    GOTO                shift, and go to state 113
    CONTINUE            shift, and go to state 114
    BREAK               shift, and go to state 115
    RETURN              shift, and go to state 116
    ';'                 shift, and go to state 117
    '{'                 shift, and go to state 53
    '}'                 shift, and go to state 118
    '('                 shift, and go to state 83
    '*'                 shift, and go to state 84
    '+'                 shift, and go to state 85
    '-'                 shift, and go to state 86
    '&'                 shift, and go to state 87
    '~'                 shift, and go to state 88
    '!'                 shift, and go to state 89

    declaration                go to state 119
    declaration_list           go to state 120
    declaration_specifiers     go to state 121
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    type_qualifier             go to state 27
    class_specifier            go to state 28
    statement                  go to state 122
    labeled_statement          go to state 123
    expression_statement       go to state 124
    compound_statement         go to state 125
    statement_list             go to state 126
    selection_statement        go to state 127
    iteration_statement        go to state 128
    jump_statement             go to state 129
    expression                 go to state 130
    assignment_expression      go to state 131
    conditional_expression     go to state 92
    logical_or_expression      go to state 93
    logical_and_expression     go to state 94
    equality_expression        go to state 95
    relational_expression      go to state 96
    additive_expression        go to state 97
    multiplicative_expression  go to state 98
    cast_expression            go to state 99
    unary_expression           go to state 100
    unary_operator             go to state 101
    postfix_expression         go to state 102
    primary_expression         go to state 103
    constant_value             go to state 104


State 54

    6 function_definition: declaration_specifiers declarator compound_statement .

    $default  reduce using rule 6 (function_definition)


State 55

   60 direct_declarator: direct_declarator '(' . parameter_type_list ')'
   61                  | direct_declarator '(' . expression ')'
   62                  | direct_declarator '(' . ')'
